completed the website

--- a/fashionblog/fashionblog.html
+++ b/fashionblog/fashionblog.html
@@ -160,6 +160,17 @@
           </div>
         </div>
       </div>
+      <div class="footer">
+        <div class="footer-left">
+          <button class="footer-button">
+            <i class="fa fa-arrow-up"></i>
+            To the top
+          </button>
+          <div class="footer-text">
+            Powered by <span class="footer-underline-text">w3.css</span>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
